@@ -20,12 +20,20 @@ class DefaultEditForm(DexterityExtensibleForm, form.EditForm):
             return
         self.applyChanges(data)
         IStatusMessage(self.request).addStatusMessage(_(u"Changes saved"), "info")
-        self.request.response.redirect(self.context.absolute_url())
+        self.request.response.redirect(self.nextURL())
     
     @button.buttonAndHandler(_(u'Cancel'), name='cancel')
     def handleCancel(self, action):
         IStatusMessage(self.request).addStatusMessage(_(u"Edit cancelled"), "info")
-        self.request.response.redirect(self.context.absolute_url()) 
+        self.request.response.redirect(self.nextURL()) 
+
+    def nextURL(self):
+        absolute_url = self.context.absolute_url()
+        immediate_view = self.fti.immediate_view
+        if immediate_view:
+            return "%s/%s" % (absolute_url, immediate_view)
+        else:
+            return absolute_url
     
     def update(self):
         self.portal_type = self.context.portal_type
@@ -39,12 +47,14 @@ class DefaultEditForm(DexterityExtensibleForm, form.EditForm):
         
         if 'cancel' in self.actions:
             self.actions["cancel"].addClass("standalone")
+
+    @property
+    def fti(self):
+        return getUtility(IDexterityFTI, name=self.portal_type)
     
     @property
     def label(self):
-        portal_type = self.context.portal_type
-        fti = getUtility(IDexterityFTI, name=portal_type)
-        type_name = fti.Title()
+        type_name = self.fti.Title()
         return _(u"Edit ${name}", mapping={'name': type_name})
         
 DefaultEditView = layout.wrap_form(DefaultEditForm)
